Adding delete and edit features

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 <label>Estado</label>
                 <select name="" id="productStatus">
                     <option value="">Estado do Pedido</option>
-                    <option value="RECEIVED">Recebido</option>
-                    <option value="CONFIRMED">Confirmado</option>
-                    <option value="DISPATCHED">Despachado</option>
-                    <option value="DELIVERED">Entregue</option>
-                    <option value="CANCELED">Cancelado</option>
+                    <option value="RECEIVED" id="receivedInputOption">Recebido</option>
+                    <option value="CONFIRMED" id="confirmedInputOption">Confirmado</option>
+                    <option value="DISPATCHED" id="dispatchedInputOption">Despachado</option>
+                    <option value="DELIVERED" id="deliveredInputOption">Entregue</option>
+                    <option value="CANCELED" id="canceledInputOption">Cancelado</option>
                 </select>
             </div>
 
