Adding simple backlog to help with tasks

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="title">
             <h3>Pedidos</h3>
             <span>Lista de Pedidos</span>
+            <p><a href="backlog.html">Backlog</a></p>
         </div>
 
         <div class="inputBox">
