Adding link to header image

--- a/backlog.html
+++ b/backlog.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="img/coco-bambu_logo-header.png" alt="">
+        <a href="index.html"> <img src="img/coco-bambu_logo-header.png" alt=""> </a>
         <h1>Tarefas a realizar </h1>
     </header>
     <main>
@@ -25,7 +25,7 @@
             <h4>Todas as tarefas foram concluídas?<input type="checkbox" id="todos" onclick="selectAll()"></h4>
         </div>
         <div id="tarefas">
-    
+
         </div>
 
     </main>
