--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="img/coco-bambu_logo-header.png" alt="">
+        <a href="index.html"> <img src="img/coco-bambu_logo-header.png" alt=""> </a>
         <h1>API Pedidos</h1>
     </header>
     <main>
